@@ -22,6 +22,10 @@
 # special tag to specify the current version
 [V]  TomeNET 4.0.0 aka "The Gathering"
 
+13/02/2003
+[P]- Mimic AC & to-dam now averaged from player & form (similar to HP)
+     I hope this will balance mimics well compared to the other classes.
+
 12/02/2003
 [O]- Admins can destroy/unequip anything
      Fixed COULD_2H encumberment penalty (now 2/3 for player-stat-based
